force-app/main/default/objects/Ingredients__c/Ingredients__c.object-meta.xml
<CustomObject>
    <description>Components to  make a menu item.</description>
    <label>Ingredient</label>
    <nameField>
        <label>Ingredients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>