force-app/main/default/objects/Ingredients__c/fields/Alcoholic__c.field-meta.xml
<CustomField>
    <fullName>Alcoholic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this ingredient alcohol free?</description>
    <inlineHelpText>Is this ingredient alcohol free?</inlineHelpText>
    <label>Alcoholic</label>
    <type>Checkbox</type>
</CustomField>