force-app/main/default/objects/Ingredients__c/fields/Gluten_Free__c.field-meta.xml
<CustomField>
    <fullName>Gluten_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this product contain gluten?</description>
    <inlineHelpText>Does this product contain gluten?</inlineHelpText>
    <label>Gluten</label>
    <type>Checkbox</type>
</CustomField>