force-app/main/default/objects/Ingredients__c/fields/Halal__c.field-meta.xml
<CustomField>
    <fullName>Halal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if the ingredient is NOT halal. If the ingredient IS halal, leave unchecked.</description>
    <inlineHelpText>Select if the ingredient is NOT halal. If the ingredient IS halal, leave unchecked.</inlineHelpText>
    <label>Not Halal</label>
    <type>Checkbox</type>
</CustomField>