force-app/main/default/objects/Ingredients__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is this ingredient used in?</description>
    <inlineHelpText>What is this ingredient used in?</inlineHelpText>
    <label>Menu Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>