force-app/main/default/objects/Ingredients__c/fields/Nuts__c.field-meta.xml
<CustomField>
    <fullName>Nuts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this ingredient trigger a nut allergy?</description>
    <inlineHelpText>Does this ingredient trigger a nut allergy?</inlineHelpText>
    <label>Nuts</label>
    <type>Checkbox</type>
</CustomField>